# linyiproj_cloud360

./: README.md
bgDiff/: CMakeLists.txt  main.cpp
bgDiff/config/: background.pcd  background_0.05.pcd  config.ini
bgDiff/core/: BackgroundModel.cpp  BackgroundModel.h  LidarProcessor.cpp  LidarProcessor.h  RoiAnalyzer.cpp  RoiAnalyzer.h  SessionManager.cpp  SessionManager.h  UnitreePclBridge.cpp  UnitreePclBridge.h  UnitreePointType.h  VisualizerHelper.cpp  VisualizerHelper.h
bgDiff/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui_bak
person_tr/: CMakeLists.txt  PersonDetectorApp.cpp  PersonDetectorApp.h  RoiManager.cpp  RoiManager.hpp  RtspCapture.cpp  RtspCapture.hpp  TrtYoloDetector.cpp  TrtYoloDetector.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp  trt.py
